updated data preparation

--- a/config/config_data.yml
+++ b/config/config_data.yml
@@ -7,9 +7,9 @@ visualize: False
 
 
 # Particle species
-species: [ #'E',
-          'Pi', 'K', 'P', 
-          #'Deu'
+species: ['El',
+          'Pi', 'Ka', 'Pr', 
+          'De', 'He'
           ]
 
 # Selections tags 
