--- a/config/config_outputs.yml
+++ b/config/config_outputs.yml
@@ -5,94 +5,94 @@
 # output file path
 #outputFilePath: "/home/galucia/antiLithium4/analysis/output/data.root"
 #studiesOutputFilePath: "/home/galucia/antiLithium4/analysis/output/data_studies.root"
-outDirs: ["all", "Pi", "K", "P"]
+outDirs: ["all", "El", "Pi", "Ka", "Pr", "De", "He"]
 
 fItsClusterSizeL0: {  name: "fItsClusterSizeL0",
-            title: "Cl. size layer 0; Cl. size layer 0; Counts",
+            title: "Cluster size layer 0; Cluster size layer 0; Counts",
             xVariable: "fItsClusterSizeL0",
-            nXBins: 25,
+            nXBins: 15,
             xMin: 0,
-            xMax: 25,
+            xMax: 15,
             type: "TH1F",
             particle: ["all", "El", "Pi", "Ka", "Pr", "De", "He"],
             }
 
 fItsClusterSizeL1: {  name: "fItsClusterSizeL1",
-            title: "Cl. size layer 1; Cl. size layer 1; Counts",
+            title: "Cluster size layer 1; Cluster size layer 1; Counts",
             xVariable: "fItsClusterSizeL1",
-            nXBins: 25,
+            nXBins: 15,
             xMin: 0,
-            xMax: 25,
+            xMax: 15,
             type: "TH1F",
             particle: ["all", "El", "Pi", "Ka", "Pr", "De", "He"],
             }
 
-fItsClusterSizeL2: {  name: "fItsClusterSizeL0",
-            title: "Cl. size layer 2; Cl. size layer 2; Counts",
+fItsClusterSizeL2: {  name: "fItsClusterSizeL2",
+            title: "Cluster size layer 2; Cluster size layer 2; Counts",
             xVariable: "fItsClusterSizeL2",
-            nXBins: 25,
+            nXBins: 15,
             xMin: 0,
-            xMax: 25,
+            xMax: 15,
             type: "TH1F",
             particle: ["all", "El", "Pi", "Ka", "Pr", "De", "He"],
             }
 
 fItsClusterSizeL3: {  name: "fItsClusterSizeL3",
-            title: "Cl. size layer 3; Cl. size layer 3; Counts",
+            title: "Cluster size layer 3; Cluster size layer 3; Counts",
             xVariable: "fItsClusterSizeL3",
-            nXBins: 25,
+            nXBins: 15,
             xMin: 0,
-            xMax: 25,
+            xMax: 15,
             type: "TH1F",
             particle: ["all", "El", "Pi", "Ka", "Pr", "De", "He"],
             }
 
 fItsClusterSizeL4: {  name: "fItsClusterSizeL4",
-            title: "Cl. size layer 4; Cl. size layer 4; Counts",
+            title: "Cluster size layer 4; Cluster size layer 4; Counts",
             xVariable: "fItsClusterSizeL4",
-            nXBins: 25,
+            nXBins: 15,
             xMin: 0,
-            xMax: 25,
+            xMax: 15,
             type: "TH1F",
             particle: ["all", "El", "Pi", "Ka", "Pr", "De", "He"],
             }
 
 fItsClusterSizeL5: {  name: "fItsClusterSizeL5",
-            title: "Cl. size layer 5; Cl. size layer 5; Counts",
+            title: "Cluster size layer 5; Cluster size layer 5; Counts",
             xVariable: "fItsClusterSizeL5",
-            nXBins: 25,
+            nXBins: 15,
             xMin: 0,
-            xMax: 25,
+            xMax: 15,
             type: "TH1F",
             particle: ["all", "El", "Pi", "Ka", "Pr", "De", "He"],
             }
 
 fItsClusterSizeL6: {  name: "fItsClusterSizeL6",
-            title: "Cl. size layer 6; Cl. size layer 6; Counts",
+            title: "Cluster size layer 6; Cluster size layer 6; Counts",
             xVariable: "fItsClusterSizeL6",
-            nXBins: 25,
+            nXBins: 15,
             xMin: 0,
-            xMax: 25,
+            xMax: 15,
             type: "TH1F",
             particle: ["all", "El", "Pi", "Ka", "Pr", "De", "He"],
             }
 
 fMeanItsClSize: {  name: "fMeanItsClSize",
-            title: "#LT Cl. size #GT; #LT Cl. size #GT; Counts",
+            title: "#LT Cluster size #GT; #LT Cluster size #GT; Counts",
             xVariable: "fMeanItsClSize",
             nXBins: 50,
             xMin: 0,
-            xMax: 25,
+            xMax: 15,
             type: "TH1F",
             particle: ["all", "El", "Pi", "Ka", "Pr", "De", "He"],
             }
 
 fClSizeCosL: {  name: "fClSizeCosL",
-            title: "#LT Cl. size #GT #times #LT cos #lamda #GT; #LT Cl. size #GT #times #LT cos #lamda #GT; Counts",
+            title: "#LT Cluster size #GT #times #LT cos #lambda #GT; #LT Cluster size #GT #times #LT cos #lambda #GT; Counts",
             xVariable: "fClSizeCosL",
-            nXBins: 250,
+            nXBins: 150,
             xMin: 0,
-            xMax: 25,
+            xMax: 15,
             type: "TH1F",
             particle: ["all", "El", "Pi", "Ka", "Pr", "De", "He"],
             }
@@ -100,7 +100,7 @@ fClSizeCosL: {  name: "fClSizeCosL",
 fP:        {  name: "fP",
             title: "#it{p} ; #it{p} (GeV/#it{c}); Counts",
             xVariable: "fP",
-            nXBins: 1000,
+            nXBins: 200,
             xMin: -1,
             xMax: 1,
             type: "TH1F",
@@ -110,7 +110,7 @@ fP:        {  name: "fP",
 fPt:       {  name: "fPt",
             title: "#it{p}_{T} ; #it{p}_{T} (GeV/#it{c}); Counts",
             xVariable: "fPt",
-            nXBins: 1000,
+            nXBins: 200,
             xMin: -1,
             xMax: 1,
             type: "TH1F",
@@ -130,19 +130,19 @@ fPhi:      {  name: "fPhi",
 fEta:      {  name: "fEta",
             title: "#eta ; #eta; Counts",
             xVariable: "fEta",
-            nXBins: 300,
-            xMin: -3,
-            xMax: 3,
+            nXBins: 80,
+            xMin: -0.8,
+            xMax: 0.8,
             type: "TH1F",
             particle: ["all", "El", "Pi", "Ka", "Pr", "De", "He"],
             }
 
 fCosL:      {  name: "fCosL",
-            title: "#LT tan#lambda #GT; #LT tan#lambda #GT; Counts",
+            title: "#LT cos#lambda #GT; #LT cos#lambda #GT; Counts",
             xVariable: "fCosL",
-            nXBins: 80,
-            xMin: -4,
-            xMax: 4,
+            nXBins: 100,
+            xMin: -1,
+            xMax: 1,
             type: "TH1F",
             particle: ["all", "El", "Pi", "Ka", "Pr", "De", "He"],
             }
@@ -222,43 +222,43 @@ fCosL:      {  name: "fCosL",
 #            }
 
 meanClSize_vs_p: {  name: "meanClSize_vs_p",
-            title: "<Cl. Size> vs #it{p}; #it{p} (GeV/#it{c}); #LT Cl. size #GT; Counts",
+            title: "<Cluster Size> vs #it{p}; #it{p} (GeV/#it{c}); #LT Cluster size #GT; Counts",
             xVariable: "fP",
-            nXBins: 1000,
-            xMin: -1,
-            xMax: 1,
+            nXBins: 200,
+            xMin: -5,
+            xMax: 5,
             yVariable: "fMeanItsClSize",
-            nYBins: 50,
+            nYBins: 30,
             yMin: 0,
-            yMax: 25,
+            yMax: 15,
             type: "TH2F",
             particle: ["all", "El", "Pi", "Ka", "Pr", "De", "He"],
             }
 
 clSizeCosL_vs_p: {  name: "clSizeCosL_vs_p",
-            title: "#LT Cl. size #GT #times #LT cos #lamda #GT vs #it{p}; #it{p} (GeV/#it{c}); #LT Cl. size #GT #times #LT cos #lamda #GT; Counts",
+            title: "#LT Cluster size #GT #times #LT cos #lambda #GT vs #it{p}; #it{p} (GeV/#it{c}); #LT Cluster size #GT #times #LT cos #lambda #GT; Counts",
             xVariable: "fP",
-            nXBins: 1000,
-            xMin: -1,
-            xMax: 1,
+            nXBins: 200,
+            xMin: -5,
+            xMax: 5,
             yVariable: "fClSizeCosL",
-            nYBins: 250,
+            nYBins: 90,
             yMin: 0,
-            yMax: 25,
+            yMax: 15,
             type: "TH2F",
             particle: ["all", "El", "Pi", "Ka", "Pr", "De", "He"],
             }
 
 clSizeCosL_vs_beta: {  name: "clSizeCosL_vs_beta",
-            title: "#LT Cl. size #GT #times #LT cos #lamda #GT vs #it{p}; #beta; #LT Cl. size #GT #times #LT cos #lamda #GT; Counts",
+            title: "#LT Cluster size #GT #times #LT cos #lambda #GT vs #it{p}; #beta; #LT Cluster size #GT #times #LT cos #lambda #GT; Counts",
             xVariable: "fBeta",
-            nXBins: 1000,
+            nXBins: 200,
             xMin: -1,
             xMax: 1,
             yVariable: "fClSizeCosL",
-            nYBins: 250,
+            nYBins: 90,
             yMin: 0,
-            yMax: 25,
+            yMax: 15,
             type: "TH2F",
             particle: ["all", "El", "Pi", "Ka", "Pr", "De", "He"],
             }
@@ -266,9 +266,9 @@ clSizeCosL_vs_beta: {  name: "clSizeCosL_vs_beta",
 beta_vs_p: {  name: "beta_vs_p",
             title: "#beta vs #it{p}; #it{p} (GeV/#it{c}); #beta; Counts",
             xVariable: "fP",
-            nXBins: 1000,
-            xMin: -1,
-            xMax: 1,
+            nXBins: 200,
+            xMin: -5,
+            xMax: 5,
             yVariable: "fBetaAbs",
             nYBins: 100,
             yMin: 0,
@@ -292,7 +292,7 @@ beta_vs_p: {  name: "beta_vs_p",
 #            }
 
 #clSizeCosL_vs_pTPC: {  name: "clSizeCosL_vs_pTPC",
-#            title: "#LT Cl. size #GT #times #LT cos #lamda #GT vs #it{p}_{TPC}; #it{p}_{TPC} (GeV/#it{c}); #LT Cl. size #GT #times #LT cos #lamda #GT; Counts",
+#            title: "#LT Cluster size #GT #times #LT cos #lambda #GT vs #it{p}_{TPC}; #it{p}_{TPC} (GeV/#it{c}); #LT Cluster size #GT #times #LT cos #lambda #GT; Counts",
 #            xVariable: "pTPC",
 #            nXBins: 1000,
 #            xMin: 0,
