o2physics related changes

--- a/o2/tree_creator/configuration.json
+++ b/o2/tree_creator/configuration.json
@@ -204,6 +204,7 @@
         "fillK": "true",
         "fillDe": "true",
         "fillHe3": "true",
+        "smallTable": "false",
         "cfgMaterialCorrection": "0",
         "zVtxMax": "10",
         "downscaleFactor": "1",
@@ -214,10 +215,10 @@
         "etaMaxV0dau": "0.8",
         "v0setting_dcaV0daughters": "1",
         "v0setting_dcaV0fromPV": "1",
-        "v0setting_dcaDaughtersToPV": "1",
+        "v0setting_dcaDaughtersToPV": "0.1",
         "v0setting_radiusMax": "100",
-        "v0setting_radiusMin": "5",
-        "v0setting_cosPA": "0.99",
+        "v0setting_radiusMin": "2",
+        "v0setting_cosPA": "0.999",
         "v0setting_nsigmaTPC": "4",
         "v0setting_massWindowLambda": "0.06",
         "v0setting_massWindowK0s": "0.01",
@@ -227,9 +228,11 @@
         "casc_setting_cosPA": "0.99",
         "casc_setting_massWindowOmega": "0.02",
         "casc_setting_massWindowXi": "0.01",
+        "desetting_nClsIts": 6,
         "desetting_nsigmaCutTPC": "2",
         "desetting_nsigmaCutTOF": "2",
         "he3setting_compensatePIDinTracking": "true",
+        "he3setting_nClsIts": 6,
         "he3setting_nsigmaCutTPC": "2",
         "he3setting_nsigmaCutTOF": "2",
         "setting_BetheBlochParams": {
