--- a/o2/tree_creator/dpl-config.json
+++ b/o2/tree_creator/dpl-config.json
@@ -737,6 +737,7 @@
         "fillK": "true",
         "fillDe": "true",
         "fillHe3": "true",
+        "smallTable": "false",
         "cfgMaterialCorrection": "0",
         "zVtxMax": "10",
         "downscaleFactor": "1",
@@ -747,10 +748,10 @@
         "etaMaxV0dau": "0.800000012",
         "v0setting_dcaV0daughters": "1",
         "v0setting_dcaV0fromPV": "1",
-        "v0setting_dcaDaughtersToPV": "1",
+        "v0setting_dcaDaughtersToPV": "0.100000001",
         "v0setting_radiusMax": "100",
-        "v0setting_radiusMin": "5",
-        "v0setting_cosPA": "0.99000001",
+        "v0setting_radiusMin": "2",
+        "v0setting_cosPA": "0.999000013",
         "v0setting_nsigmaTPC": "4",
         "v0setting_massWindowLambda": "0.0599999987",
         "v0setting_massWindowK0s": "0.00999999978",
@@ -760,8 +761,10 @@
         "casc_setting_cosPA": "0.99000001",
         "casc_setting_massWindowOmega": "0.0199999996",
         "casc_setting_massWindowXi": "0.00999999978",
+        "desetting_nClsIts": "6",
         "desetting_nsigmaCutTPC": "2",
         "desetting_nsigmaCutTOF": "2",
+        "he3setting_nClsIts": "6",
         "he3setting_compensatePIDinTracking": "true",
         "he3setting_nsigmaCutTPC": "2",
         "he3setting_nsigmaCutTOF": "2",
