--- a/standalone_scripts/bethe_bloch_parametrisation.yml
+++ b/standalone_scripts/bethe_bloch_parametrisation.yml
@@ -9,22 +9,22 @@ p:
           name: "clSizeCosL_vs_p",
           title: "#LT Cluster size #GT #times #LT cos #lambda #GT vs #it{p}; #it{p} (GeV/#it{c}); #LT Cluster size #GT #times #LT cos #lambda #GT; Counts",
           xVariable: "fPAbs",
-          nXBins: 200,
-          xMin: 0.5,
+          nXBins: 47,
+          xMin: 0.3,
           xMax: 5,
           xLabel: "#it{p} (GeV/#it{c})",
           yVariable: "fClSizeCosL",
-          nYBins: 90,
+          nYBins: 45,
           yMin: 0,
           yMax: 15,
           yLabel: "#LT Cluster size #GT #times #LT cos #lambda #GT",
           type: "TH2F",
           particle: ["all", "El", "Pi", "Ka", "Pr", "De", "He"],
         }
-  xMinFit: 0.5
+  xMinFit: 0.3
   xMaxFit: 2
   yMinFit: 0
-  yMaxFit: 8
+  yMaxFit: 12
   xMaxDoubleFit: 0.8
 
   BBparams: {
@@ -39,18 +39,52 @@ p:
                 name: "nsigma_vs_p",
                 title: "n #sigma vs #it{p}; #it{p} (GeV/#it{c}); n #sigma; Counts",
                 xVariable: "fP",
-                nXBins: 200,
-                xMin: -5,
-                xMax: 5,
+                nXBins: 100,
+                xMin: -10,
+                xMax: 10,
                 xLabel: "#it{p} (GeV/#it{c})",
                 yVariable: "fNSigmaPr",
                 nYBins: 100,
-                yMin: -25,
-                yMax: 25,
-                yLabel: "n #sigma",
+                yMin: -10,
+                yMax: 10,
+                yLabel: "n #sigma_{ITS}",
                 type: "TH2F",
                 particle: ["all", "El", "Pi", "Ka", "Pr", "De", "He"],
-               }           
+               }
+
+  plot_expected: {
+                name: "expected_clsize_vs_p",
+                title: "Expected #LT Cluster size #GT #times #LT cos #lambda #GT vs #it{p}; #it{p} (GeV/#it{c}); Expected #LT Cluster size #GT #times #LT cos #lambda #GT ; Counts",
+                xVariable: "fP",
+                nXBins: 100,
+                xMin: -5,
+                xMax: 5,
+                xLabel: "#it{p} (GeV/#it{c})",
+                yVariable: "fExpClSizeCosL",
+                nYBins: 45,
+                yMin: 0,
+                yMax: 15,
+                yLabel: "Expected #LT Cluster size #GT #times #LT cos #lambda #GT",
+                type: "TH2F",
+                particle: ["Pr"],
+               }
+
+  plot_mismatch_corr: {
+                        name: "mismatch_corr",
+                        title: "mismatch correlation; #it{p}_{TPC} - #it{p} (GeV/#it{c}); n #sigma; Counts",
+                        xVariable: "fPMismatch",
+                        nXBins: 20,
+                        xMin: -0.5,
+                        xMax: 0.5,
+                        xLabel: "#it{p} (GeV/#it{c})",
+                        yVariable: "fNSigmaPr",
+                        nYBins: 100,
+                        yMin: -25,
+                        yMax: 25,
+                        yLabel: "n #sigma_{ITS}",
+                        type: "TH2F",
+                        particle: ["Pr"],
+                      }
 
 beta:
   plot: { 
@@ -87,15 +121,15 @@ beta:
                 name: "nsigma_vs_beta",
                 title: "n #sigma vs #beta; #beta; n #sigma; Counts",
                 xVariable: "fBeta",
-                nXBins: 200,
+                nXBins: 100,
                 xMin: -1,
                 xMax: 1,
                 xLabel: "#beta",
                 yVariable: "fNSigmaPr",
                 nYBins: 100,
-                yMin: -10,
-                yMax: 10,
-                yLabel: "n #sigma",
+                yMin: -5,
+                yMax: 5,
+                yLabel: "n #sigma_{ITS, #beta}",
                 type: "TH2F",
                 particle: ["all", "El", "Pi", "Ka", "Pr", "De", "He"],
                }
