--- a/config/config_data.yml
+++ b/config/config_data.yml
@@ -3,7 +3,7 @@
 #
 
 # enabling configuration
-visualize: True
+visualize: False
 
 # Particle species
 species: ['El',
@@ -28,7 +28,7 @@ cuts:     { nClusTPCmin: 80,
 nn_mode: 'classification' # 'classification' or 'regression'
 features: ['fItsClusterSizeL0', 'fItsClusterSizeL1', 'fItsClusterSizeL2', 'fItsClusterSizeL3', 'fItsClusterSizeL4', 'fItsClusterSizeL5', 'fItsClusterSizeL6', 'fEta', 'fPhi', 'fCosL', 'fP', 'fMeanItsClSize', 'fClSizeCosL']
 #features: ['fItsClusterSizeL0', 'fItsClusterSizeL1', 'fItsClusterSizeL2', 'fItsClusterSizeL3', 'fItsClusterSizeL4', 'fItsClusterSizeL5', 'fItsClusterSizeL6', 'fEta', 'fPhi', 'fCosL', 'fP']
-target: 'partID'
+target: 'fPartID'
 oneHot: False
 useClasses: True
 oversample: True
